fix(GlFilteredSearch): Fix clear button overlapping long text & input
Adds fix in GlSearchboxByClick by removing absolute style
on the GlClearIconButton

Instead render the button in the append slot within a container
so that the button is not part of the `gl-filtered-search-scrollable`
container.

--- a/src/components/base/search_box_by_click/search_box_by_click.scss
+++ b/src/components/base/search_box_by_click/search_box_by_click.scss
@@ -61,12 +61,9 @@
     }
   }
 
-  .gl-search-box-by-click-clear-button {
-    @include gl-absolute;
-    @include gl-top-2;
-    @include gl-right-7;
-    @include gl-mr-2;
-    @include gl-z-index-3;
+  .gl-search-box-by-click-clear-button-container {
+    @include gl-p-2;
+    @include gl-inset-border-y-1-gray-400;
   }
 
   .gl-search-box-by-click-menu {
